--- a/qios-backend/public/QIOS_Admin_Panel.html.html
+++ b/qios-backend/public/QIOS_Admin_Panel.html.html
@@ -26,16 +26,16 @@
             font-family: var(--font-family);
             background-color: var(--bg-color);
             background-image: 
-                url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"%3E%3Cg fill-rule="evenodd"%3E%3Cg fill="%231f2937" fill-opacity="0.4"%3E%3Cpath opacity=".5" d="M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z"/%3E%3Cpath d="M6 5V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h5v1h-5v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4H6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6v-4H0v-1h6V6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V0h1v6h4V6h1v-1h-1V0h-1v5h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-4v1h4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4H7v-4H6v-1h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-4h1v4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4v-1h-4v-4h4V6h1V5h-1v1h-4v4h4v1h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4h-1v-4h-4v4H6v-4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v1h1v4H5v-1h-1v-4H0v-1h5v-4H0v-1h5v-4H0v-1h5v-4H0v-1h5v-4H0v-1h5v-4H0v-1h5v-4H0v-1h5v-4H0v-1h5v-4H0v-1h5v-4H0V6h1V5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5h4V0h1v5Z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E'),
+                url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"%3E%3Cg fill-rule="evenodd"%3E%3Cg fill="%231f2937" fill-opacity="0.4"%3[...]
                 radial-gradient(circle at 15% 15%, rgba(56, 189, 248, 0.15) 0%, transparent 35%),
                 radial-gradient(circle at 85% 75%, rgba(0, 242, 234, 0.1) 0%, transparent 40%);
             color: var(--text-primary);
             padding: 2rem;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start; /* Changed from center to flex-start */
             min-height: 100vh;
-            overflow: hidden;
+            overflow: auto; /* <== allow scrolling */
         }
 
         .admin-panel {
@@ -58,6 +58,8 @@
                 "ai ai ai ai entangle entangle entangle entangle qsim qsim qsim qsim"
                 "ai ai ai ai entangle entangle entangle entangle log log log log"
                 "training training training training stress stress stress stress log log log log";
+            max-height: 100vh; /* panel scrolls if needed */
+            overflow: auto;
         }
 
         .panel {
@@ -92,12 +94,12 @@
         #header p { margin: 0; color: var(--text-secondary); }
 
         /* Stats Card */
-        .stat-card { background: var(--panel-bg-color); border: 1px solid rgba(56, 189, 248, 0.1); border-radius: 12px; padding: 1.25rem; display: grid; grid-template-columns: 1fr auto; grid-template-rows: auto auto auto; gap: 0.25rem 1rem; }
+        .stat-card { background: var(--panel-bg-color); border: 1px solid rgba(56, 189, 248, 0.1); border-radius: 12px; padding: 1.25rem; display: grid; grid-template-columns: 1fr auto; grid-template-rows: auto auto auto; align-items: center; }
         .stat-card-title { grid-column: 1 / 2; color: var(--text-secondary); font-size: 1rem; }
         .stat-card-main { grid-column: 1 / 2; display: flex; align-items: baseline; gap: 0.5rem; }
         .stat-card-value { font-size: 1.75rem; font-weight: 600; color: var(--text-primary); line-height: 1; }
         .stat-card-subtitle { font-size: 0.8rem; color: var(--text-secondary); }
-        .stat-card-index { grid-column: 2 / 3; grid-row: 1 / 4; display: flex; align-items: center; justify-content: center; background: rgba(0,0,0,0.2); border-radius: 8px; padding: 0 1rem; font-size: 1.25rem; font-weight: 600; }
+        .stat-card-index { grid-column: 2 / 3; grid-row: 1 / 4; display: flex; align-items: center; justify-content: center; background: rgba(0,0,0,0.2); border-radius: 8px; padding: 0 1rem; font-size: 1.2rem; }
         .progress-bar { grid-column: 1 / 3; height: 4px; background: rgba(0, 0, 0, 0.3); border-radius: 2px; margin-top: 0.5rem; overflow: hidden; }
         .progress-bar-inner { height: 100%; width: 50%; border-radius: 2px; transition: width 0.5s ease-in-out, background-color 0.5s ease; }
 
@@ -115,7 +117,7 @@
         .progress-circle { position: relative; width: 120px; height: 120px; }
         .progress-circle-bg, .progress-circle-fg { fill: none; stroke-width: 10; }
         .progress-circle-bg { stroke: rgba(0, 0, 0, 0.3); }
-        .progress-circle-fg { stroke: var(--accent-cyan); stroke-linecap: round; transform-origin: 50% 50%; transform: rotate(-90deg); transition: stroke-dashoffset 0.5s ease-in-out; filter: drop-shadow(0 0 5px var(--accent-cyan)); }
+        .progress-circle-fg { stroke: var(--accent-cyan); stroke-linecap: round; transform-origin: 50% 50%; transform: rotate(-90deg); transition: stroke-dashoffset 0.5s ease-in-out; filter: drop-shadow(0 0 6px var(--accent-cyan)); }
         .progress-circle-text { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 1.8rem; font-weight: 600; color: var(--text-primary); }
         .progress-circle-label { text-align: center; color: var(--text-secondary); font-size: 0.9rem; margin-top: 1rem; }
 
@@ -128,7 +130,7 @@
         .entanglement-buttons { display: flex; gap: 1rem; margin-top: 1rem; width: 100%; }
         
         /* General Button & Input Styles */
-        .btn { background: linear-gradient(145deg, #4f5b78, #2a3349); color: var(--text-primary); border: 1px solid rgba(255,255,255,0.1); padding: 0.6rem 1.2rem; border-radius: 8px; font-weight: 500; cursor: pointer; transition: all 0.2s ease; box-shadow: 0 4px 15px rgba(0,0,0,0.2); }
+        .btn { background: linear-gradient(145deg, #4f5b78, #2a3349); color: var(--text-primary); border: 1px solid rgba(255,255,255,0.1); padding: 0.6rem 1.2rem; border-radius: 8px; font-weight: 500; cursor: pointer; transition: all 0.2s; }
         .btn:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(0,0,0,0.3); filter: brightness(1.2); }
         .btn.primary { background: linear-gradient(145deg, var(--accent-blue), #2563eb); }
         .btn.danger { background: linear-gradient(145deg, var(--accent-red), #be123c); }
